# migraviz

./: README.md  pyproject.toml
src/migraviz/: __init__.py  cli.py  db.py  introspect.py  migrate.py  models.py  renderer.py  translator.py
tests/: conftest.py  test_db.py  test_introspect.py  test_migrate.py  test_renderer.py  test_translator.py
tests/fixtures/: alembic.ini
tests/fixtures/alembic/: env.py
tests/fixtures/alembic/versions/: 001_create_users.py  002_create_posts.py
