[project]
name = "migraviz"
version = "0.1.0"
description = "Generate ER diagrams from Alembic migration history"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
image = ["graphviz>=0.20"]

[project.scripts]
migraviz = "migraviz.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "graphviz>=0.20",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests requiring Docker",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
